Applied flexbox + justify and align parameters. Still need to fix footer.

--- a/google.css
+++ b/google.css
@@ -65,21 +65,60 @@ html {
     }
 
 /*Main Sectiion*/
-    #main {
-        min-height: 100%;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 250px 70px 70px 250px;
-        grid-template-areas:
-        ". logo ."
-        ". search ."
-        " . flexbox ."
-        ". google-text .";
+
+    .container {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .child1 {
+        width: 100%;
+        height: 120px;
+        margin: 150px 0px 0px 0px;
+
+    }
+
+    .child2 {
+        width: 500px;
+        height: 50px;
+
+
+    }
+
+    .child3 {
+        display: flex;
+        width: 100%;
+        height: 35px;
+        margin: 5px 0px 20px 0px;
+        justify-content: center;
+
+    }
+
+    .child4 {
+        width: 200px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .child5{
+        width: 100%;
+        height: 200px;
+
     }
 
     .logofont {
+        display: flex;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 95px;
+        justify-content: center;
+
+
     }
     .dodgerblue { color: dodgerblue;
     }
@@ -90,12 +129,6 @@ html {
     .l { color: green;
     }
 
-    /*#logo {
-        grid-area: logo;
-        justify-self: center;
-        align-self: end;
-    }
-     */
 
     #search {
         grid-area: search;
@@ -156,11 +189,8 @@ html {
     #footer {
         position: absolute;
         bottom: 0;
-        display: grid;
-        grid-template-columns: 100px 100px 150px 1200px 70px 70px 70px;
-        grid-template-rows: 50px;
-        grid-template-areas:
-                "advertising business hsw . privacy terms settings";
+        display: flex;
+        justify-content: space-around;
     }
     #advertising {
         grid-area: advertising;
